--- a/website/static/scss/pages/_main_menu.scss
+++ b/website/static/scss/pages/_main_menu.scss
@@ -7,6 +7,7 @@ html, body {
 
 .content-wrapper {
     padding: 1rem var.$padding-sides;
+    width: 100%;
 
     .profile-pic {
         width: 5rem;
